--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=base64:aJfkhO+KXhQQYSKRpkGTjDHm48mL40v3HrHmgoDJpBc=
+APP_KEY=base64:05lJnL3rpjACtgqWcTv1nWVOmbMiZaGRgd2I8edo048=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -9,7 +9,7 @@ LOG_CHANNEL=stack
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=bookstore
+DB_DATABASE=rahma
 DB_USERNAME=root
 DB_PASSWORD=
 
